# api/internal/routers/group.go
@@ -16,6 +16,12 @@ func BuildGroupRouter() *chi.Mux {
 	groupRouter.Put("/{groupId}", handlers.UpdateGroup)
 	groupRouter.Put("/{groupId}/groupSettings", handlers.UpdateGroupSettings)
 	groupRouter.Put("/{groupId}/groupReceiptSettings", handlers.UpdateGroupReceiptSettings)
+	groupRouter.Get("/{groupId}/supplierProfile", handlers.ListSupplierProfiles)
+	groupRouter.Post("/{groupId}/supplierProfile", handlers.CreateSupplierProfile)
+	groupRouter.Post("/{groupId}/supplierProfile/resolve", handlers.ResolveSupplierProfile)
+	groupRouter.Get("/{groupId}/supplierProfile/{profileId}", handlers.GetSupplierProfile)
+	groupRouter.Put("/{groupId}/supplierProfile/{profileId}", handlers.UpdateSupplierProfile)
+	groupRouter.Delete("/{groupId}/supplierProfile/{profileId}", handlers.DeleteSupplierProfile)
 	groupRouter.Put("/{groupId}/member/{userId}/grants", handlers.UpdateGroupMemberGrants)
 	groupRouter.With(middleware.CanDeleteGroup).Delete("/{groupId}", handlers.DeleteGroup)
 	groupRouter.Post("/{groupId}/pollGroupEmail", handlers.PollGroupEmail)
