# desktop/src/open-api/model/resolveSupplierProfileCommand.ts
@@ -1,0 +1,18 @@
+/**
+ * Receipt Wrangler API.
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface ResolveSupplierProfileCommand { 
+    /**
+     * Receipt name to match against profiles and aliases
+     */
+    name: string;
+}
+
